# POS-Simulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  assets.qrc  views.qrc
application/: CMakeLists.txt
application/src/: controllers.h  main.c
application/src/controllers/: amount.c  ctrl_idle.h  idle.c  idle.h  in_progress.c  main_menu.c  payment_type_menu.c
assets/: qmldir
cmake/: InitializeQt.cmake  SetQtAppProperties.cmake  SetQtResources.cmake
components/: InvisibleButton.qml
framework/: CMakeLists.txt
framework/include/: fw_battery.h  fw_cellular.h  fw_lvgl.h  fw_string.h  fw_thread.h  fw_timestamp.h  fw_wifi.h
framework/src/: fw_string.c  fw_time.c  fw_timestamp.c
framework/src/simulator/: CMakeLists.txt  assets.qrc  components.qrc  main.cpp  skins.qrc
framework/src/simulator/api/: binding.cpp  platf_lvgl.cpp  platf_lvgl_driver.cpp  platf_lvgl_driver.h  platf_thread.cpp  platf_time.cpp  platf_timestamp.cpp  platf_wifi.cpp
framework/src/simulator/assets/: KeyCodes.qml
framework/src/simulator/components/: InvisibleButton.qml  qmldir
framework/src/simulator/controllers/: application_controller.cpp  application_controller.hpp  keypad_controller.hpp  pos_controller.cpp  pos_controller.hpp
gui/: CMakeLists.txt
gui/include/: engine.h  gui.h  gui_engine.h  gui_menu.h  gui_theme.h  icons.h  status_bar.h  theme.h  views.h
gui/src/: engine.c  gui_engine.c
gui/src/d200/: CMakeLists.txt  assets.h  components.h  dimensions.h  gui_assets.h  gui_components.h  gui_status_bar.c  gui_theme.c  theme.c  theme.h
gui/src/d200/assets/: font_montserrat_14.c  font_montserrat_26.c  font_roboto_14.c  font_roboto_18.c  font_roboto_20.c  font_roboto_24.c  font_roboto_bold_32.c  img_battery_1.c  img_battery_2.c  img_battery_3.c  img_battery_4.c  img_battery_5.c  img_battery_full.c  img_brightness.c  img_dollar.c  img_gear.c  img_hotel.c  img_no_card.c  img_phone.c  img_receipt.c  img_signal_0.c  img_signal_1.c  img_signal_2.c  img_undo.c  img_working.c
gui/src/d200/components/: body.c  comp_body.c  comp_title_bar.c  icons.c  status_bar.c  title_bar.c
gui/src/d200/views/: amount.c  gui_idle.c  gui_menu.c  idle.c  in_progress.c  menu.c
skins/: D200.qml  qmldir
source/: main.cpp
source/application/: app_idle.c  app_idle.h  app_main.c  entry.c  gui.h
source/application/controllers/: ctrl_idle.c
source/application/gui/: gui_engine.c  gui_status_bar.h  gui_views.h
source/application/gui/assets/: img_signal_4.c  img_signal_5.c  img_wifi_0.c  img_wifi_1.c  img_wifi_2.c  img_wifi_3.c
source/application/gui/components/: gui_screen.h  gui_status_bar.c  gui_status_bar.h
source/application/gui/d200/: gui_theme.c
source/application/gui/d200/assets/: img_logo.c  img_signal_3.c
source/application/gui/d200/components/: gui_dimensions.h
source/application/gui/d200/views/: gui_idle.c
source/application/gui/views/: gui_idle.c  gui_idle.h
source/components/: display.cpp  display.hpp
source/controllers/: application_controller.cpp  display_controller.cpp  display_controller.hpp  keypad_controller.cpp  keypad_controller.hpp  master_controller.cpp  master_controller.hpp  pos_controller.cpp  pos_controller.hpp  touchscreen_controller.cpp  touchscreen_controller.hpp
source/framework/: binding.cpp  binding.hpp  framework.h  lv_conf.h  lv_init.c  lv_init.h
source/framework/include/: framework.h  fw_clock.h  fw_log.h  fw_lvgl.h  fw_time.h
source/framework/source/: fw_clock.c  fw_time.c  fw_timestamp.c
source/framework/source/simulator/: binding.hpp  lv_conf.h  platf_battery.cpp  platf_cellular.cpp  platf_clock.cpp  platf_log.cpp  platf_lvgl.cpp  platf_thread.cpp  platf_time.cpp  platf_wifi.cpp
views/: SimulatorView.qml
views/components/: D200.qml  InvisibleButton.qml
